@@ -17,6 +17,7 @@ plugins {
   id "idea"
   id 'org.asciidoctor.convert' version '1.5.3'
   id 'com.github.jruby-gradle.base' version '1.2.0'
+  id 'com.github.kt3k.coveralls' version '2.6.3'
 }
 
 allprojects {
@@ -69,6 +70,9 @@ subprojects {
   apply plugin: 'java'
   apply plugin: 'groovy'
   apply plugin: 'jacoco'
+  apply plugin: 'com.github.kt3k.coveralls'
+  apply plugin: 'codenarc'
+
   version = '0.3.0'
   group = 'ru.ratauth'
 
@@ -81,6 +85,13 @@ subprojects {
       csv.enabled true
       html.destination "${buildDir}/jacocoHtml"
     }
+  }
+
+  tasks.withType(Test) { task ->
+    minHeapSize = '32m'
+    maxHeapSize = '256m'
+    jvmArgs "-XX:MaxPermSize=512m"
+    jacocoTestReport.executionData += files("$buildDir/jacoco/${task.name}.exec")
   }
 
   jar {
